mengubah ukuran teks ehehehe

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   
   <input type="checkbox" id="one">
   <div id="page1" class="page">
-    <div class="front">HEHEHE</div>
+    <div class="front">HEHE</div>
     <div class="back">Katakan cinta bila kau cinta </div>
     <label for="one"></label>
   </div>
