Menambahkan element js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ScapbooksBagas</title>
+    <title>4U❤️</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -38,11 +38,28 @@
   
   <input type="checkbox" id="one">
   <div id="page1" class="page">
-    <div class="front">HEHE</div>
+    <div class="front">HEHE❤️</div>
     <div class="back">Katakan cinta bila kau cinta </div>
     <label for="one"></label>
   </div>
 </div>
+ <body>
+  <!-- ... konten lainnya ... -->
+
+  <audio id="audio" loop>
+    <source src="audio/Keisya Levronka - Jadi Kekasihku Saja (Official Music Video)_[cut_17sec].mp3" type="audio/mpeg">
+    Browser kamu tidak mendukung pemutar audio.
+  </audio>
+
+  <script>
+    // Tunggu interaksi pengguna
+    document.addEventListener('click', function() {
+      const audio = document.getElementById('audio');
+      audio.play();
+    }, { once: true }); // hanya dijalankan sekali
+  </script>
+</body>
+
 </body>
 </html> 
  
