--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://linkke.gambar.com/gambar.jpg">
     <title>4U❤️</title>
     <link rel="stylesheet" href="style.css">
 </head>
